Update Course Detail and Type

--- a/Root/IE104.CK/course-detail/course-detail.html
+++ b/Root/IE104.CK/course-detail/course-detail.html
@@ -31,26 +31,87 @@
     <div id="nav">
       <p><a class="nav" href="../courses/index.html">Khoá học</a> &#62 <a class="nav" href="../courses-type/course-type.html">HTML</a> &#62 <a class="nav" href="">Khoá học HTML dành cho người mới</a></p>
     </div>
-    <h2 id="course_name">Khoá học HTML dành cho người mới</h2>
-    <h3 id="subtitle">Cung cấp kiến thức nền tảng về HTML</h3>
+    <h1 id="course_name">Khoá học HTML dành cho người mới</h1>
+    <h2 id="subtitle">Cung cấp kiến thức nền tảng về HTML</h2>
     <p>Giảng viên: <a class="lecturer" href="../lecturer-detail/lecturer-detail.html">Phạm Thùy Dung</a></p>
     <p>Ngày đăng: 21/12/2021</p>
-    <div id="btn_area">
-      <button id="join">Vào học ngay &#62&#62&#62</button>
-    </div>
   </div>
   <div id="right_side"><img src="../images/html.png"></div>
 </div>
 
 <div class="detail">
-  <h3>Bạn có thể học được:</h3>
+  <div id="left_detail">
+  <h3>BẠN CÓ THỂ HỌC ĐƯỢC</h3>
   <ul>
-    <li><p>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</p></li>
-    <li><p>Cài đặt Visual Studio Code vào hệ thống.</p></li>
+    <li><p>Nhận biết các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</p></li>
+    <li><p>Cài đặt và sử dụng Visual Studio Code vào hệ thống.</p></li>
     <li><p>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</p></li>
   </ul>
-  <h3>Giới thiệu khoá học:</h3>
+  <h3>GIỚI THIỆU KHOÁ HỌC</h3>
   <p>Đây là khoá học HTML dành cho người mới bắt đầu. Nó sẽ đem đến cho bạn những kiến thức nền tảng, cơ bản nhất về HTML để bạn có thể học lên các mức độ cao hơn.</p>
+<div class="comment">
+  <h3>ĐÁNH GIÁ</h3>
+  <p id="rate">4.2<span id="subrate">(208)</span>
+    <span class="fa fa-star checked"></span>
+  <span class="fa fa-star checked"></span>
+  <span class="fa fa-star checked"></span>
+  <span class="fa fa-star checked"></span>
+  <span class="fa fa-star"></span>
+  </p>
+  <form>
+    <h3>Thêm bình luận</h3>
+    <p>
+    <label for="username">Họ và tên: </label>
+    <input id="username" type="text" placeholder="Nhập Họ và tên"></p>
+    <p><label for="des">Nội dung:</label></p>
+    <p><textarea id="des" placeholder="Nhập bình luận..."></textarea></p>
+    <input id="send" type="button" value="Gửi">
+  </form>
+  
+  <section id="new">
+    <h3>@ <span id="nusername" class="username"></span></h3>
+    <p id="ntime" class="time"></p>
+    <p id="ndes"></p>
+  </section>
+  <section>
+    <h3>@ <span class="username">Yến Nhi</span></h3>
+    <p class="time">21:56 Thứ 5 ngày 09/09/2021</p>
+    <p>Đã mua, đã sử dụng, máy chạy êm, cầm chắc tay hơn cái trước mình dùng. shop tư vấn nhiệt tình, mùa dịch mà giao hàng vẫn nhanh. anh ship thì quá ok luôn. mình đặt lỡ nhắn đc nhà mẹ đẻ, đến khi gọi nhận hàng mình báo địa chỉ khác, anh ship vẫn vui vẻ đồng ý... nói chung là tuyệt.</p>
+  </section>
+  <section>
+    <h3>@ <span class="username">Phạm Triết</span></h3>
+    <p class="time">06:39 Thứ 5 ngày 09/09/2021</p>
+    <p>Tông đơ rất đẹp, nhưng bộ kéo cắt tỉa thì như đồ chơi trẻ em 😂😂😂, đóng gói cẩn thận, giao hàng nhiệt tình. cảm ơn TIKI.</p>
+  </section>
+  <section>
+    <h3>@ <span class="username">Chí Phèo</span></h3>
+    <p class="time">12:26 Thứ 3 ngày 07/09/2021</p>
+    <p>Tông đơ nhìn chắc chắn, lưỡi dao sắc bén, cầm vừa tay, thao tác dễ, kéo tặng kèm cũng dễ sử dụng. Sẽ dùng thực tế để trải nghiệm thêm.</p>
+  </section>
+  <section>
+    <h3>@ <span class="username">Tony Phùng</span></h3>
+    <p class="time">10:45 Thứ 2 ngày 06/09/2021</p>
+    <p>Rất hài lòng ( giao hàng nhanh hàng đúng như trên hình , cắt thử rất Ok Thank’s Shop.</p>
+  </section>
+</div>
+</div>
+<div id="right_detail">
+  <div id="right_gr">
+  <div id="btn_area">
+    <button id="join">Vào học ngay &#62&#62&#62</button><br>
+    <button id="save">Lưu lại xem sau</button>
+  </div>
+  <div id="review">
+  <h4>Khoá học gồm:</h4>
+  <ul>
+  <li>9 bài học</li>
+  <li>Hơn 1 giờ xem</li>
+  <li>Học bất cứ khi nào</li>
+  <li>Truy cập không giới hạn</li>
+</ul>
+  </div>
+</div>
+</div>
 </div>
 <!-- InstanceEndEditable -->
 	
