Change comment course-detail

--- a/Root/IE104.CK/course-detail/course-detail.html
+++ b/Root/IE104.CK/course-detail/course-detail.html
@@ -76,22 +76,22 @@
   <section>
     <h3>@ <span class="username">Yến Nhi</span></h3>
     <p class="time">21:56 Thứ 5 ngày 09/09/2021</p>
-    <p>Đã mua, đã sử dụng, máy chạy êm, cầm chắc tay hơn cái trước mình dùng. shop tư vấn nhiệt tình, mùa dịch mà giao hàng vẫn nhanh. anh ship thì quá ok luôn. mình đặt lỡ nhắn đc nhà mẹ đẻ, đến khi gọi nhận hàng mình báo địa chỉ khác, anh ship vẫn vui vẻ đồng ý... nói chung là tuyệt.</p>
+    <p>Đã học xong. Nhìn vào có vẻ khó nhưng cô dạy rất dễ hiểu nhờ những ví dụ rất sinh động. Chất lượng video tốt, vô cùng sắc nét. Âm thanh nghe to và rõ.</p>
   </section>
   <section>
     <h3>@ <span class="username">Phạm Triết</span></h3>
     <p class="time">06:39 Thứ 5 ngày 09/09/2021</p>
-    <p>Tông đơ rất đẹp, nhưng bộ kéo cắt tỉa thì như đồ chơi trẻ em 😂😂😂, đóng gói cẩn thận, giao hàng nhiệt tình. cảm ơn TIKI.</p>
+    <p>Một khoá học tuyệt vời. Với những bạn nào muốn bắt hầu học về lập trình web, hãy xem thử bài này, nó sẽ giúp bạn nắm đầy đủ những điều căn bản cần nhớ về HTML. Một khi đã nắm vững căn bản, bạn có thể tự do bay nhảy, thiết kế cho bản thân những trang web xịn xò.</p>
   </section>
   <section>
     <h3>@ <span class="username">Chí Phèo</span></h3>
     <p class="time">12:26 Thứ 3 ngày 07/09/2021</p>
-    <p>Tông đơ nhìn chắc chắn, lưỡi dao sắc bén, cầm vừa tay, thao tác dễ, kéo tặng kèm cũng dễ sử dụng. Sẽ dùng thực tế để trải nghiệm thêm.</p>
+    <p>Ngoại trừ một vài chỗ lướt hơi nhanh thì phần còn lại giảng khá tốt.</p>
   </section>
   <section>
     <h3>@ <span class="username">Tony Phùng</span></h3>
     <p class="time">10:45 Thứ 2 ngày 06/09/2021</p>
-    <p>Rất hài lòng ( giao hàng nhanh hàng đúng như trên hình , cắt thử rất Ok Thank’s Shop.</p>
+    <p>Tuy chưa từng học về lập trình trước đây nhưng giờ đây mình đã có thể tự viết nên 1 trang web cơ bản cho chính mình. Cảm ơn cô rất nhiều.</p>
   </section>
 </div>
 </div>
