--- a/Site/IE104.CK/forgot/index.html
+++ b/Site/IE104.CK/forgot/index.html
@@ -1,16 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html><!-- InstanceBegin template="../template/Templates/template-bs.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style.css">
+<meta charset="utf-8">
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>Untitled Document</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="styles_template_bs.css">
+  <link rel="stylesheet" href="style/style.css">
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
+
 <body>
-    <div class="content-fluid">
-        <div class="row">
+<div class="content-fluid">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/index.html"><img src="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/images/logo.png" style=" height:100px;"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/courses/index.html">Courses</a>
+        </li>
+       <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/log-in/index.html">Log-in</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/sign-up/index.html">Sign-up</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+<!-- InstanceBeginEditable name="EditRegion3" -->
+    <div class="row">
             <div class="col-md-12">
                 <div id="wrapper">
                     <div id="main">
@@ -29,7 +62,198 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>        
+<!-- InstanceEndEditable -->
+<!-- Footer -->
+<footer class="bg-dark text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-twitter"></i
+      ></a>
+
+      <!-- Google -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+
+      <!-- Github -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-github"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Form -->
+    <section class="">
+      <form action="">
+        <!--Grid row-->
+        <div class="row d-flex justify-content-center">
+          <!--Grid column-->
+          <div class="col-auto">
+            <p class="pt-2">
+              <strong>Sign up for our newsletter</strong>
+            </p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-5 col-12">
+            <!-- Email input -->
+            <div class="form-outline form-white mb-4">
+              <input type="email" id="form5Example21" class="form-control" />
+              <label class="form-label" for="form5Example21">Email address</label>
+            </div>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-auto">
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-outline-light mb-4">
+              Subscribe
+            </button>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </form>
+    </section>
+    <!-- Section: Form -->
+
+    <!-- Section: Text -->
+    <section class="mb-4">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+        repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+        eum harum corrupti dicta, aliquam sequi voluptate quas.
+      </p>
+    </section>
+    <!-- Section: Text -->
+
+    <!-- Section: Links -->
+    <section class="">
+      <!--Grid row-->
+      <div class="row">
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-3 mb-md-0">
+          <h5 class="text-uppercase">Liên Kết</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/index.html" class="text-white">Home</a>
+            </li>
+            <li>
+              <a href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/courses/index.html" class="text-white">Courses</a>
+            </li>
+            <li>
+              <a href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/log-in/index.html" class="text-white">Log-in</a>
+            </li>
+            <li>
+              <a href="file:///C|/Users/19522/Documents/GitHub/IE104.CK/Site/IE104.CK/sign-up/index.html" class="text-white">Sign-up</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-3 mb-md-0">
+          <h5 class="text-uppercase">Khóa học</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">HTML</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">CSS</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Javascript</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Jquery</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">PHP</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-3 mb-md-0">
+          <h5 class="text-uppercase">Giới thiệu</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white"><i class="fab fa-facebook-f"></i> 60.978 Likes</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white"><i class="fab fa-twitter"></i> 9.860 Followers</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white"><i class="fab fa-youtube"></i> 8.159 Subscribe</a>
+            </li>
+             <li>
+              <a href="#!" class="text-white">Về chúng tôi</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-3 mb-md-0">
+          <h5 class="text-uppercase">Liên hệ</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white"><i class="fab fa-facebook-f">KT-learn@gmail.com</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">https://www.KT-learn.vn</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Kp. 6, P. Linh Trung, Tp. Thủ Đức, Tp. HCM</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white"> 0976263355</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!--Grid row-->
+    </section>
+    <!-- Section: Links -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 Copyright:
+    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
-</html>
+<!-- InstanceEnd --></html>
